@@ -1,3 +1,6 @@
+2012-12-11 Ivan Kartolo <ivan@kartolo.de>
+	* Bug #43064: check if array is given in get_localized_categories userFunc.
+
 2012-12-09 Ivan Kartolo <iva@kartolo.de>
 	* Bug #41340: fixed recipient header if no name is given
 	* Bug #41480: message ID uses the host name
